--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
 <body>
     <nav>
         <div class="nav-center">
+            <!-- nav header -->
             <div class="nav-header">
                 <h1>Navbar Project</h1>
                 <button class="nav-toggle">
                     <i class="fas fa-bars"></i>
                 </button>
             </div>
+            <!-- links to html pages -->
             <ul class="links">
                 <li>
                   <a href="index.html">home</a>
